# ccbcge

./: .addAlias.sh  .gitattributes  .gitignore  .tag.sh  CITATION.cff  LICENSE  MANIFEST.in  README.md  TODO.md  dev.md  get_version.py  pyproject.toml
src/ccbcge/: __init__.py  data.py  dataAccess.py
