[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccbcge"
version = "v0.1.3"
authors = [ 
    {name = "Bryce Tolman"},
    {email = "bat.2000@live.com"},
]
description = "A package to access gene expression data for breast cancer"
readme = { file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {text = "Apache-2.0"}
keywords = ["gene expression", "breast cancer", "bioinformatics"]
dependencies = [
    "requests>2.25.1",
    "pandas>1.3.0",
]

[project.urls]
Homepage = "https://github.com/brycetolman54/ccbcge"


